# twog

./: .gitignore  .vercelignore  AGENTS.md  NOTICE  README.md  pyproject.toml  requirements.txt
.dg/: telemetry.yaml
deliverables/: TWOG_Nookplot_Aligned_Proof_Network_Vision.md  TWOG_Proof_Network_Techtree_Delta_Plan.md  TWOG_Scientific_Agent_Skills_Integration_Plan.md
docs/: AGENT_PROOF_NETWORK_GUIDE.md  CODEX_PROJECT_CONTEXT.md  DAGSTER_PLUS_SETUP.md  HOMEPAGE_CREATIVE_BRIEF.md  INGESTION_BRIDGE_V2.md  INSTALL_AGENT_SKILL.md  MD_COMPUTE_EXPERT_GATE_SOP.md  PUBLIC_CANDIDATE_RECORDS.md  PUBLIC_CONTRIBUTION_WORKFLOW.md  RESEARCH_FOLLOWUP_RESOLVER_SOP.md  RESEARCH_WORKSPACES.md  SCRAPER_BRIDGE_PLAN.md  STRUCTURED_SOURCE_SOPS.md  TWOG_RECORD_STORAGE_POLICY.md  TWOG_SYSTEM_WIRING.md  TWOG_V2_MODULE_FLOWCHARTS.md  TWOG_V2_NON_TECHNICAL_OVERVIEW.md  TWOG_V2_SUBSTACK_NOTES_DRAFTS.md  TWOG_V2_SUBSTACK_WEEK_SERIES.md  TWOG_V2_SYSTEM_ARCHITECTURE.md  TWOG_V2_SYSTEM_ARCHITECTURE_2026_05_08.md  TWOG_V2_SYSTEM_GUIDE.md  VALIDATION_REQUEST_QUEUE_SOP.md  X_TOPIC_MONITORING_SOURCE_SPEC.md
runpod_workers/: __init__.py
scribbles/: agent-proof-capsule-harness.py  research-memory-website-section.md  twog-research-memory-substack-v2.md
scripts/: apply-proof-network-migrations.mjs  apply_proof_network_migrations.py  demo_personas.json  end_to_end_tune_smoke.py  multi_agent_onboarding_demo.py  one_shot_accept_and_sync.py  run_demo_personas.py
tests/: test_auto_dive_worker.py  test_demo_personas.py  test_ingestion_bridge_contracts.py  test_llm_capsule_grader.py  test_reward_scoring.py  (+9 more)
(+343 files in other folders)
