[project]
name = "hsa_dagster"
requires-python = ">=3.11,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.2",
    "dagster-cloud>=1.13.2,<1.14",
    "pydantic==2.12.5",
    "psycopg2-binary==2.9.11",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hsa_dagster", "src/hsa_research"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hsa_dagster"
registry_modules = [
    "hsa_dagster.components.*",
]

[project.scripts]
hsa-ingestion-bridge = "hsa_research.ingestion_bridge.cli:main"
twog-command-center = "hsa_research.ingestion_bridge.command_center_web:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
